# CNets

./: .gitignore  CMakeLists.txt  README.md  SNocscript.py  cnets.sln  cnets.vcxproj  pom.xml
dispatchBuffer/: CMakeLists.txt  SNocscript.py  dispatchBuffer.h  flat.gernet.yaml  gernet.yaml
dispatchBuffer/src/: dispatchBuffer.c
dispatchBuffer/tests/: dispatchBufferTest.c
dispatchKernel/: CMakeLists.txt  SNocscript.py  dispatchKernel.h  flat.gernet.yaml  gernet.yaml
dispatchKernel/dispatcher/: CMakeLists.txt  SNocscript.py  dispatcher.h  flat.gernet.yaml  gernet.yaml
dispatchKernel/dispatcher/src/: dispatcher.c  main.c
dispatchKernel/dispatcher/tests/: dispatcherTest.c
dispatchKernel/src/: dispatchKernel.c  main.c
dispatchKernel/tests/: dispatchKernelTest.c
enet/: CMakeLists.txt  SNocscript.py  flat.gernet.yaml  gernet.yaml
enet/src/: enet.c
enet/tests/: enetTest.c
mapBuffer/: CMakeLists.txt  SNocscript.py  flat.gernet.yaml  gernet.json  mapBuffer.h
mapBuffer/c/: SNocscript.py
mapBuffer/c/include/: mapBuffer.h
mapBuffer/c/src/: main.c  mapBuffer.c
mapBuffer/c/tests/: mapBufferTest.c
mapBuffer/java/: pom.xml
mapBuffer/js/src/com_github_airutech_cnets_mapBuffer/: mapBuffer.coffee
mapBuffer/js/src/com_github_osblinnikov_cnets_mapBuffer/: mapBuffer.coffee
mapBuffer/js/test/: index.html
mapBuffer/js/test/specs-coffee/: mapBuffer.receiver.coffee  mapBuffer.sender.coffee  mapBuffer.spec.coffee  mapBufferPerf.sender.coffee  mapBufferPerf.spec.coffee  mapBufferPerfMulti.sender.coffee  mapBufferPerfMulti.spec.coffee
mapBuffer/src/: main.c  mapBuffer.c
mapBuffer/tests/: mapBufferTest.c
queue/: CMakeLists.txt  SNocscript.py  flat.gernet.yaml  gernet.json  queue.h
queue/c/: SNocscript.py
queue/c/include/: liblfds611.h  liblfds611QUEUE.h  queue.h
queue/c/src/: lfds611.c  main.c  queue.c
queue/c/src/lfds611/: liblfds611_internal.h
queue/c/src/lfds611/lfds611_abstraction/: lfds611_abstraction_cas.c  lfds611_abstraction_dcas.c  lfds611_abstraction_free.c  lfds611_abstraction_increment.c  lfds611_abstraction_malloc.c
queue/c/tests/: queueTest.c
queue/java/: pom.xml
queue/js/src/com_github_airutech_cnets_queue/: queue.coffee
queue/js/src/com_github_osblinnikov_cnets_queue/: queue.coffee
queue/js/test/: index.html
queue/js/test/jasmine/: MIT.LICENSE
queue/js/test/specs-coffee/: queue.spec.coffee
queue/src/: main.c  queue.c
queue/tests/: queueTest.c
readerWriter/: CMakeLists.txt  Exports.h  SNocscript.py  bufferKernelParams.h  bufferReadData.h  bufferWriteData.h  dispatcherCollector.h  flat.gernet.yaml  gernet.json  linkedContainer.h  reader.h  readerWriter.h  statsCollectorStatic.h  writer.h
readerWriter/c/: SNocscript.py
readerWriter/c/include/: linkedContainer.h  reader.h  readerWriter.h  statsCollectorStatic.h  writer.h
readerWriter/c/src/: main.c  readerWriter.c  statsCollectorStatic.c
readerWriter/c/tests/: readerWriterTest.c
readerWriter/java/: pom.xml
readerWriter/js/src/com_github_airutech_cnets_readerWriter/: readerWriter.coffee
readerWriter/js/src/com_github_osblinnikov_cnets_readerWriter/: readerWriter.coffee
readerWriter/js/test/: index.html
readerWriter/js/test/jasmine/: jasmine.css  jasmine.js
readerWriter/js/test/specs-coffee/: readerWriter.spec.coffee
readerWriter/src/: dispatcherCollector.c  main.c  readerWriter.c  statsCollectorStatic.c
readerWriter/tests/: readerWriterTest.c
replicator/topology/: CMakeLists.txt  SNocscript.py  flat.gernet.yaml  gernet.yaml  prototype.gernet.yaml  topology.h
replicator/topology/src/: main.c  topology.c
replicator/topology/tests/: topologyTest.c
runnablesContainer/: CMakeLists.txt  Kernel.h  RunnableStoppable.h  RunnablesInterface.h  SNocscript.py  flat.gernet.yaml  gernet.json  runnablesContainer.h
runnablesContainer/c/: SNocscript.py
runnablesContainer/c/include/: Kernel.h  RunnableStoppable.h  runnablesContainer.h
runnablesContainer/c/src/: Kernel.c  main.c  runnablesContainer.c
runnablesContainer/c/tests/: runnablesContainerTest.c
runnablesContainer/java/: pom.xml
runnablesContainer/js/src/com_github_airutech_cnets_runnablesContainer/: runnablesContainer.coffee
runnablesContainer/js/src/com_github_osblinnikov_cnets_runnablesContainer/: runnablesContainer.coffee
runnablesContainer/js/test/: index.html
runnablesContainer/js/test/specs-coffee/: runnablesContainer.spec.coffee
runnablesContainer/src/: Kernel.c  main.c  runnablesContainer.c
runnablesContainer/tests/: runnablesContainerTest.c
selector/: CMakeLists.txt  SNocscript.py  flat.gernet.yaml  gernet.json  selector.h
selector/c/: SNocscript.py
selector/c/include/: selector.h
selector/c/src/: main.c  selector.c
selector/c/tests/: selectorTest.c
selector/java/: pom.xml
selector/js/src/com_github_airutech_cnets_selector/: selector.coffee
selector/js/src/com_github_osblinnikov_cnets_selector/: selector.coffee
selector/js/test/: index.html
selector/js/test/jasmine/: jasmine-html.js
selector/js/test/specs-coffee/: selector.spec.coffee
selector/src/: main.c  selector.c
selector/tests/: selectorTest.c
types/: CMakeLists.txt  SNocscript.py  arrayObject.h  binary.h  bufferKernelParams.h  bufferReadData.h  flat.gernet.yaml  gernet.json  serializator.h  statsLocalProtocol.h  timeUtils.h  types.h
types/c/: SNocscript.py
types/c/include/: arrayObject.h  binary.h  bufferKernelParams.h  bufferReadData.h  statsLocalProtocol.h  timeUtils.h  types.h
types/c/src/: main.c  timeUtils.c  types.c
types/c/tests/: typesTest.c
types/java/: pom.xml
types/js/src/com_github_airutech_cnets_types/: types.coffee
types/js/src/com_github_osblinnikov_cnets_types/: types.coffee
types/js/test/: index.html
types/js/test/specs-coffee/: eval.spec.coffee  msgch.sender.coffee  msgch.spec.coffee  types.spec.coffee  worker.spec.coffee
types/src/: main.c  timeUtils.c  types.c
types/tests/: typesTest.c
vector/: CMakeLists.txt  SNocscript.py  flat.gernet.yaml  gernet.yaml  vector.h
vector/src/: vector.c
vector/tests/: vectorTest.c
(+50 files in other folders)
